<resources>
    <string name="app_name">AppAlmacen</string>
    <string name="abrir_camara">Abrir Cámara</string>
    <string name="toque_para_abrir_camara">Toque para abrir cámara</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="ej_smartphone_x1_premium">Ej. Smartphone X1 Premium</string>
    <string name="cantidad">Cantidad</string>
    <string name="cancelar_producto">Cancelar</string>
    <string name="guardar_producto">Guardar Producto</string>
    <string name="new_product">Añadir Producto</string>
    <string name="new_user">Añadir Usuario</string>
    <string name="logo">Logo</string>
    <string name="appalmacen">AppAlmacen</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="salir">Salir</string>
</resources>